# ntnu_cyborg_coordinator

./: CMakeLists.txt  README.md  package.xml
launch/: coordinator
src/: cyborg_coordinator_node.cpp  node.cpp
srv/: RequestControl.srv
