<?xml version="1.0"?>
<package>
  <name>ntnu_cyborg_coordinator</name>
  <version>0.0.0</version>
  <description>NTNU Cyborg ROS Package: Coordinator</description>
  <license>TODO</license>
  <url type="website">https://github.com/thentnucyborg/ntnu_cyborg_coordinator</url>
  <maintainer email="cyborg@ntnu.edu">NTNU Cyborg</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>

